<resources>
    <string name="app_name">Experiment Game</string>
    <string name="title_activity_question">QuestionActivity</string>

    <string name="intro">You will see a screen with options as shown above.
        Each rectangle corresponds to one choice you can make. To learn more about the options,
        tap on the $ sign for the virtual money you may win (green) or lose (red).
        Tap on the dice for the probability of winning (green) or losing (red) this virtual money.
        You can tap on the symbols as much as you want. When you have decided, tap on the select button.</string>

    <string name="play_game">Play Game</string>
    <string name="quit">Quit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">neurons</string>
    <string name="BTonOff">Bluetooth</string>

    <string name="demo">TRAINING</string>
    <string name="end_demo">END TRAINING</string>
    <string name="finish_demo">You\'ve finished the training! \n\nGood luck playing!</string>

    <string name="select">Select</string>
    <string name="next_trial">Next</string>
    <string name="stay_longer">Check the attributes carefully!</string>
    <string name="database_error">Something is wrong with storing your result, please try to exit the
        app by licking the square on the bottom and clear the app by swiping it to the left.
        If reopening the app does not solve the problem, please contact the technician. </string>

    <string name="handshake_error">The handshake message does not match!</string>
    <string name="bluetooth_error">The bluetooth is not responsive for over 500 milliseconds!</string>
    <string name="thread_error">The thread is interrupted</string>


    <string name="pop_up_bt">Bluetooth is not connected correctly, try again</string>

    <string name="survey_date">Date: </string>
    <string name="survey_age">Age: </string>
    <string name="survey_language">Are you a native English speaker?</string>
    <string name="survey_hand">Handedness?</string>
    <string name="survey_color">Do you have any form of color blindness?</string>
    <string name="survey_vision">Vision?</string>
    <string name="survey_disease">Do you currently have a diagnosed,
        major neurological or other health condition that affects your
        memory or attention? (other than ADHD, Depression,
        or Autism spectrum disorders) Such as traumatic brain injury,
        multiple sclerosis, chronic fatigue syndrome, Alzheimer’s, Parkinson’s, etc.
        Do not enter epilepsy</string>
    <string name="inform_sona">You will get the Sona credit up to now,
        but feel free to keep playing for the chance to win bonus money.</string>

    <string name="survey_claim">The National Institutes of Health (NIH),
        the Federal agency that is supporting this research,
        requests information on the gender, racial, and ethnic composition
        of the participants of studies it sponsors. This information is
        collected to ensure that the results of this study can be generalized
        to the population as a whole and do not exclude any ethnic or gender groups.
        You do not have to respond to these questions to participate in experiments
        in the lab. If you choose to respond, please select the relevant
        categories below.</string>
    <string name="survey_personal_info_sex">Sex: </string>
    <string name="survey_personal_info_ethnic">Ethnic Category: </string>
    <string name="survey_personal_info_racial">Racial Category: </string>
    <string name="instruct1">Indicate the extend to which you agree or disagree with each of the following statements.
        (1 = Strongly Agree, 2 = Agree, 3 = Disagree, 4 = Strongly Disagree)</string>
    <string name="instruct2">Indicate the extent to which the following statements are true or false about you.
        (On a scale from 0 - 10, 0 for False, 10 for True)	</string>

    <string-array name="SurveyQs">
        <item>If I think something unpleasant is going to happen I usually get pretty "worked up."</item>
        <item>I\'m always willing to try something new if I think it will be fun.</item>
        <item>It would excite me to win a contest.</item>
        <item>Even if something bad is about to happen to me, I rarely experience fear or nervousness.</item>
        <item>When good things happen to me, it affects me strongly.</item>
        <item>I go out of my way to get things I want.</item>
        <item>I crave excitement and new sensations.</item>
        <item>I have very few fears compared to my friends.</item>
        <item>When I want something, I usually go all-out to get it.</item>
        <item>I often act on the spur of the moment.</item>
        <item>When I get something I want, I feel excited and energized.</item>
        <item>I will often do things for no other reason than that they might be fun.</item>
        <item>I feel pretty worried or upset when I think or know somebody is angry with me.</item>
        <item>If I see a chance to get something I want, I move on it right away.</item>
        <item>Criticism or scolding hurts me quite a bit.</item>
        <item>I worry about making mistakes.</item>
        <item>I feel worried when I think I have done poorly at something.</item>
        <item>When I seen an opportunity for something I like, I get excited right away.</item>
        <item>When I\'m doing well at something, I love to keep at it.</item>
        <item>When I go after something, I use a "no holds barred" approach.</item>

        <item>I like to do things which are new and different.</item>
        <item>I like to do things spontaneously.</item>
        <item>I tend to do several things at the same time.</item>
        <item>I actively look for new experiences.</item>
        <item>I have a feel for how things work.</item>
        <item>I look for new sensations.</item>
        <item>I am excited by what is new in my field.</item>
        <item>I often have lots of spontaneous ideas.</item>
        <item>I have new ideas all the time.</item>
        <item>I enjoy starting projects.</item>
    </string-array>
    <string-array name="longquestions">
        <item>On a scale from 1 to 5, how engaged were you in the task?
            With 1 being not engaged at all, and 5 being extremely engaged.
            Please be as honest as possible.</item>
        <item>Using a scale from 1–5, how would you rate the degree with which
            you paid attention to all available information, before you made a decision?
        (1: I paid attention to very few factors, 5: I paid attention to all available information)</item>
        <item>Using a scale from 1–5, how would you rate your willingness to take a risk?
        (1: strongly risk-averse; 5: strongly risk-seeking)</item>
        <item>Using a scale from 1–5, how would you rate the degree
            to which you used a clearly defined strategy to find the best option,
            that you could explain in words?
        (1: never any clear strategy used, 5: always clear strategy used)</item>
        <item>Using a scale from 1–5, how would you rate the degree to which
            you used clearly different strategies in the most complex case
            (4 options, each with 4 attributes) relative to the most simple case
            (2 options, each with 2 attributes)?
        (1: no difference in strategy, 5: completely different strategies)</item>
        <item> </item>

    </string-array>

    <string name="Survey_single">On a scale from 1 to 5, how motivated are you to do well on this task?
            With 1 being not motivated at all, and 5 being extremely motivated.
            Please be as honest as possible.</string>

    <string name="Qs1">Using a scale from 1 to 5, how would
        you rate the influence of the following attributes
        on your assessment of an option’s value (or attractiveness)?</string>

    <string name="Qs2">Using a scale from 1–5,
        how would you rate the difficulty of deciding
        for the different decision situations?
        (1: easiest, 5: hardest)</string>

    <string name="Qs3">Using a scale from 1–5,
        how strongly did each variable increase
        the degree of difficulty of finding the best available option?
        (1: weakest, 5: strongest)</string>

    <string name="lastQ">Do you have any additional comments on this experiment?</string>

</resources>
