<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyOpening">

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_date"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_age"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/Language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_language"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="216dp" />

    <TextView
        android:id="@+id/Handedness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_hand"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="312dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="440dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="515dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="608dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/Lan_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/Lang_No"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/Handedness_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="351dp" />

    <Button
        android:id="@+id/Handedness_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Left"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="351dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="436dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="440dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="512dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="508dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="573dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="639dp" />

</android.support.constraint.ConstraintLayout>