<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context="com.jhu.chenyuzhang.experimentgame.DemoActivity">

    <TextView
        android:id="@+id/text_view_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/demo"
        android:textColor="@color/pinky"
        android:textStyle="bold"
        android:textSize="50sp"/>
    <Button
        android:id="@+id/button_end_demo"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/end_demo"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/pink"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/option1"
            android:layout_width="250dp"
            android:layout_height="700dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/blue">

            <ViewAnimator
                android:id="@+id/view_animator_dollar1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/image_view_dollar1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dollar1"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text_view_dollar1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:text="50"
                    android:layout_gravity="center"/>

            </ViewAnimator>


            <ViewAnimator
                android:id="@+id/view_animator_probability1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/image_view_probability1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/probability1"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text_view_probability1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:text="40"
                    android:layout_gravity="center"/>

            </ViewAnimator>

            <Button
                android:id="@+id/button_select1"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:text="@string/select"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/option2"
            android:layout_width="250dp"
            android:layout_height="700dp"
            android:layout_toRightOf="@+id/option1"
            android:layout_marginLeft="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/green">

            <ViewAnimator
                android:id="@+id/view_animator_dollar2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/image_view_dollar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dollar1"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text_view_dollar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:text="50"
                    android:layout_gravity="center"/>

            </ViewAnimator>

            <ViewAnimator
                android:id="@+id/view_animator_probability2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/image_view_probability2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/probability1"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text_view_probability2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:text="40"
                    android:layout_gravity="center"/>

            </ViewAnimator>

            <Button
                android:id="@+id/button_select2"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:text="@string/select"
                android:textSize="20sp"/>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text=""
        android:textSize="100sp"
        android:textColor="@color/white"/>

</RelativeLayout>
